# nextj-grpc-sample

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  generate_protos.sh  pyproject.toml
backend/docs/: how-to-work.md  installed-packages.md
backend/server/: server.py
backend/tests/: test_server.py
docs/: dev.md  init-project.md
envoy/: envoy.yaml
frontend/: .gitignore  Dockerfile  Dockerfile.local  generate_protos.sh  package-lock.json  package.json
frontend/docs/: installed-packages.md
frontend/src/app/: page.tsx
