[tool.poetry]
name = "grpc_project"
version = "0.1.0"
description = "A gRPC server example using Python"
authors = ["yongwoon<yonyon.japan@gmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.56.1"
grpcio-tools = "^1.56.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"